Don't show error on unknown-result payment transactions.

Before this patch, calling PaymentResponse.complete("unknown") and
PaymentResponse.complete() would show an error dialog on desktop
implementations of PaymentRequest. This is contrary to the spec and does
not match Android and iOS implementations.

This patch changes the error dialog showing condition from
"status != success" to "status == fail".

After this patch, only calling PaymentResponse.complete("fail") will
show an error dialog.

Bug: 734081
Change-Id: I579d6a012f9caae4172066deddcb9e86bf17ef06
Reviewed-on: https://chromium-review.googlesource.com/538256
Commit-Queue: Rouslan Solomakhin <rouslan@chromium.org>
Commit-Queue: Mathieu Perreault <mathp@chromium.org>
Reviewed-by: Mathieu Perreault <mathp@chromium.org>
Cr-Commit-Position: refs/heads/master@{#480086}
Former-commit-id: e3473192cbea2379e3275c24237e6344cd930519